@@ -87,6 +87,7 @@ Features needs re-implementation at Qt4 port
 =======
 - dbus integration for documents (used to be dcop bindings for documents)
 
+- TextDocument::clearUndo / clearRedo is not implemented; only used in newly created documents
 
 
 Fixes needed for the first release candidate of the Qt4 port
@@ -116,15 +117,9 @@ Fixes needed for the first release candidate of the Qt4 port
 
 - minimize the number of bundled 3rd party icons; most should be usable from Oxygen icon theme
 
-- GPLink should have an option to set the libraries' path
-- SDCC should have an option to set extra include path
-- SDCC should have an option to enable non-free libraries/includes
-
 - loading C code to PIC fails
     - apparently when using a project, the PIC gets recognized and uploading works
 
 - cannot compile code for PIC, because SDCC complains about the PIC identifier
     - pic16f84 works; others are not clear
 
-- cannot convert C code to ASM or HEX, because function __sdcc_gsinit_startup
-    - need to set proper sdcclib when linking; to be automatized
